# oss-2025

./: LICENSE  README.md  作业要求.md
python-security-scanner/: .gitignore  .pysec_history.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  error_utils.py  ignore_demo_report.md  main.py  pyproject.toml  redos_report.md  requirements.txt  scan_report.html  scan_report.json  scan_report.md  test_multithread.py  test_output.json  test_report.html  test_result.json
python-security-scanner/.pysec_history/: scan_20260212_205956.json  scan_20260212_210117.json  scan_20260212_210207.json
python-security-scanner/docs/: API.md  AST_REFERENCE.md  BEST_PRACTICES.md  FAQ.md  RULE_GUIDE.md  ~$作业-毕业论文模版.doc  ~$报告1.docx  大作业-修改版（未完成）.doc  大作业.doc  报告1.docx  课程作业-毕业论文模版.doc  项目报告.md
python-security-scanner/pysec/: __init__.py  advanced_scanner.py  cache.py  cache_manager.py  charts.py  cli.py  cli_parser.py  colors.py  config.py  config_manager.py  engine.py  fixer.py  git_utils.py  html_reporter.py  ignore.py  ignore_checker.py  ignore_handler.py  incremental.py  junit_reporter.py  models.py  progress.py  reporter.py  rule_repository.py  rule_validator.py  scan_enhance.py  scan_exporter.py  scan_filter.py  scan_history.py  scan_ignore.py  scan_stats.py  scanner.py  severity_adjuster.py  st_fixer.py
python-security-scanner/pysec/commands/: rules.py
python-security-scanner/pysec/reporters/: html_charts_reporter.py  sarif_reporter.py
python-security-scanner/pysec/rules/: __init__.py  base.py  (+16 more)
python-security-scanner/test_threads/: test_1.py  test_10.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
python-security-scanner/tests/: __init__.py  test_dashboard.py  test_fixer.py  test_ignore_comments.py  test_ignore_handler.py  test_progress.py  test_redos.py  test_scanner.py  test_severity_adjuster.py  test_severity_filter.py
(+13 files in other folders)
